refactor: upgrade plugin structure